# local-llm-test

./: README.md  pyproject.toml
src/local_llm_test/: __init__.py  rag.ipynb
