[project]
name = "local-llm-test"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "langchain-mistralai>=0.1.5",
    "ipykernel>=6.29.4",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.2",
    "langchain>=0.1.17",
    "langchain-community>=0.0.36",
    "langchainhub>=0.1.15",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rag_test"]
